<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="Safety" Id="{77b90171-3616-47b4-82e7-fc27d29ea278}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Safety
VAR
	rTrig : R_Trig;
	tonDelay : TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF TS.iSafetyMat1 AND TS.iSafetyMat2 AND TS.iEStop1 AND TS.iEStop2 THEN
	TS.iSafetyMatAlarm := FALSE;
ELSE
	TS.iSafetyMatAlarm := TRUE;
END_IF



IF NOT TS.iEStop1 OR NOT TS.iEStop2 OR MC.iState = 100 THEN
	TS.oReset := FALSE;
	TS.oErrAckInput := FALSE;
	TS.oErrAckOutput := FALSE;
	TS.oRunInput := FALSE;
	TS.oRunOutput := FALSE;
	//Module_IO.iRelaySwitch := FALSE;
ELSIF Module_IO.iResetButton THEN // Reset button, toggle only
	TS.oErrAckInput := TRUE;
	TS.oErrAckOutput := TRUE;
	//Module_IO.iRelaySwitch := TRUE;
	TS.oRunInput := TRUE;
	TS.oRunOutput := TRUE;
END_IF



(********* Bypass to be used for screens  **********
IF HMI_IO.iDigital[1] THEN //Bypass/Run switch
	TS.oRunInput := TRUE;
	TS.oRunOutput := TRUE;
	HMI_IO.iMotorControl[5] := TRUE;
ELSE
	TS.oRunInput := FALSE;
	TS.oRunOutput := FALSE;
	HMI_IO.iMotorControl[5] := FALSE;
END_IF
    **********************************************)]]></ST>
    </Implementation>
    <LineIds Name="Safety">
      <LineId Id="14" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="8" Count="1" />
      <LineId Id="7" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="48" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="68" Count="1" />
      <LineId Id="55" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="76" Count="3" />
      <LineId Id="73" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="37" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>